[gd_scene load_steps=7 format=2]

[ext_resource path="res://demo/scenes/other/ComputerProgram.gd" type="Script" id=1]
[ext_resource path="res://demo/fonts/big_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://demo/scenes/other/CustomButton.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.8, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0784314, 0.0784314, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id=3]
resource_name = "load_program"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Background/ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.77, 0.86, 1.53, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, 30.0, 50.0, 90.0, 95.0, 100.0 ]
}

[node name="ComputerProgram" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -684.0
margin_bottom = -400.0
rect_min_size = Vector2( 340, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 340, 200 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -20.0
margin_right = 125.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 40 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="Upload" type="VBoxContainer" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Question" type="Label" parent="Background/Upload"]
margin_top = 28.0
margin_right = 340.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 2 )
text = "UPLOAD?"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Background/Upload"]
margin_top = 98.0
margin_right = 340.0
margin_bottom = 172.0
custom_constants/separation = 22
alignment = 1

[node name="No" parent="Background/Upload/Buttons" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_right = 159.0
margin_bottom = 74.0
rect_min_size = Vector2( 138, 0 )
text = "NO"

[node name="Yes" parent="Background/Upload/Buttons" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_right = 319.0
margin_bottom = 74.0
rect_min_size = Vector2( 138, 0 )
text = "YES"

[node name="WhyNot" type="Label" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "WHY NOT?"
align = 1
valign = 1

[node name="Done" type="Label" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "DONE"
align = 1
valign = 1

[node name="BlankScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/load_program = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="Background/Upload/Buttons/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Background/Upload/Buttons/Yes" to="." method="_on_Yes_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
